--- a/css/style_autoprefixed.css
+++ b/css/style_autoprefixed.css
@@ -1212,7 +1212,7 @@ input[type="checkbox"].visually-hidden {
   background-color: #e7e2cd;
   background-image: url("../img/background/map.png");
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position: center;
   background-size: cover;
 }
 
@@ -1904,7 +1904,7 @@ input[type="checkbox"].visually-hidden {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-width: 100vh;
+  min-width: 100%;
   min-height: 100vh;
 }
 
